--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,19 @@
-FROM python:3.9-slim-buster
+# Use official Python runtime as a parent image
+FROM python:3.9-slim
 
+# Set the working directory inside the container
 WORKDIR /app
 
-WORKDIR /app
-COPY
+# Copy requirements.txt and install dependencies
+COPY ./requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+
+# Copy the FastAPI app code into the container
+COPY ./ /app
+
+# Expose the port that FastAPI will run on
+EXPOSE 8000
+
+# Command to run FastAPI with Uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
