--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
           MONGO_INITDB_ROOT_PASSWORD: admin123
         options: >-
           --mount type=volume,source=mongo_data,target=/data/db
-          --mount type=bind,source=${{ github.workspace }}/backend/init-db.js,target=/docker-entrypoint-initdb.d/init-db.js
+          --mount type=bind,source=${{ github.workspace }}/init-db.js,target=/docker-entrypoint-initdb.d/init-db.js
 
     steps:
     # Checkout the repository
