--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,6 @@ jobs:
           MONGO_INITDB_ROOT_PASSWORD: admin123
         options: >-
           --mount type=volume,source=mongo_data,target=/data/db
-          --mount type=bind,source=${{ github.workspace }}/init-db.js,target=/docker-entrypoint-initdb.d/init-db.js
 
     steps:
     # Checkout the repository
@@ -46,7 +45,13 @@ jobs:
 
     # Run Docker Compose (MongoDB, Backend, and Frontend)
     - name: Run Docker Compose
-      run: docker-compose -f docker-compose.yml up --build -d
+      run: docker compose -f docker-compose.yml up --build -d
+
+    - name: List backend files
+      run: ls -la ${{ github.workspace }}
+
+    - name: Copy init-db.js to MongoDB container
+      run: docker cp ${{ github.workspace }}/init-db.js mongodb:/docker-entrypoint-initdb.d/init-db.js
 
     # Wait for MongoDB to be ready
     - name: Wait for MongoDB to be ready
